--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-swiper-flatlist": "^1.0.6",
     "react-native-timeago": "^0.4.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.1",
     "react-native-web": "~0.13.12",
     "react-native-webview": "7.4.3",
     "react-navigation": "^4.4.3",
