--- a/package.json
+++ b/package.json
@@ -34,10 +34,10 @@
     "react-native-countdown-hint": "^0.0.3",
     "react-native-dropdown-picker": "^3.7.8",
     "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "~1.8.0",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-netinfo": "^1.1.0",
-    "react-native-reanimated": "~1.13.0",
+    "react-native-reanimated": "^1.13.3",
     "react-native-render-html": "^4.2.0",
     "react-native-router-flux": "^4.2.0",
     "react-native-safe-area-context": "3.1.9",
