--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-modal-dropdown": "^1.0.0",
     "react-native-netinfo": "^1.1.0",
     "react-native-reanimated": "^1.13.3",
     "react-native-render-html": "^4.2.0",
