--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^8.2.2",
     "moment": "^2.22.1",
     "native-base": "^2.15.2",
+    "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -37,8 +38,10 @@
     "react-native-expo-image-cropper": "^1.0.2",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-material-textfield": "^0.16.1",
     "react-native-modal-dropdown": "^1.0.0",
     "react-native-netinfo": "^1.1.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "^1.13.3",
     "react-native-render-html": "^4.2.0",
     "react-native-router-flux": "^4.2.0",
